--- a/Python first steps, day 4 -- 2022-12Dec-12.ipynb
+++ b/Python first steps, day 4 -- 2022-12Dec-12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "360b2f4d",
+   "id": "845052ee",
    "metadata": {},
    "source": [
     "# Agenda, day 4: Functions!\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be6f2d6c",
+   "id": "19f35fee",
    "metadata": {},
    "source": [
     "# What are functions?\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e3dee51",
+   "id": "619d952c",
    "metadata": {},
    "source": [
     "# To define a new function:\n",
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a970d585",
+   "id": "efae0b42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3187f121",
+   "id": "7aefcbd8",
    "metadata": {},
    "source": [
     "# What happens when I define a function?\n",
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "965422fa",
+   "id": "f6f0a188",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "277267cb",
+   "id": "1179b3ac",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4f98610c",
+   "id": "d30b689b",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d96128e6",
+   "id": "9dbc6ece",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d55ab28e",
+   "id": "5121ad66",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7ca83958",
+   "id": "6fceec92",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "532ccba2",
+   "id": "d43f4a87",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2695dd7",
+   "id": "57b00467",
    "metadata": {},
    "source": [
     "# Exercise: Calculator\n",
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6613a521",
+   "id": "c2d28a33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0b4793a5",
+   "id": "080e8675",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b49d5132",
+   "id": "d7c4e873",
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8286b824",
+   "id": "7323de61",
    "metadata": {},
    "source": [
     "# Arguments and parameters\n",
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "673bbe7b",
+   "id": "74a8055c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b7d2fb56",
+   "id": "5abf9fbf",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "539cd2ce",
+   "id": "55d3ba29",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "cbbedba2",
+   "id": "abe83b0e",
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bc747af",
+   "id": "704d9c95",
    "metadata": {},
    "source": [
     "# Recap on simple parameters\n",
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cd513e6",
+   "id": "f4f4edf5",
    "metadata": {},
    "source": [
     "# Exercise: Rewrite `calc` to use parameters\n",
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "db32a875",
+   "id": "e43caac0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "29ebe6fd",
+   "id": "f8732412",
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e8c8b5f8",
+   "id": "d5517451",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "a50609ca",
+   "id": "98d1fbe7",
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18fc15cc",
+   "id": "a45e8493",
    "metadata": {},
    "source": [
     "# Next up:\n",
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d260ce2",
+   "id": "8f1e6cfc",
    "metadata": {},
    "source": [
     "# Return values\n",
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "d6f686af",
+   "id": "9b97e048",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "17516454",
+   "id": "ae4cfc5e",
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "cf53570a",
+   "id": "ceab5542",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "3557add7",
+   "id": "2703e9cf",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90efbd89",
+   "id": "48039dc7",
    "metadata": {},
    "source": [
     "# What might we return from a function?\n",
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "641f9a45",
+   "id": "2121fd19",
    "metadata": {},
    "source": [
     "# Exercise: Biggest and smallest\n",
@@ -722,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "7b08a4fa",
+   "id": "f3004956",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "88f1861a",
+   "id": "ac43479b",
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "d87a2176",
+   "id": "20385554",
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "39a69092",
+   "id": "9878d737",
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "8c45d4a4",
+   "id": "3d1cbc5a",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "ccee557d",
+   "id": "c9e7caa4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45ba8b51",
+   "id": "00efae14",
    "metadata": {},
    "source": [
     "# Types of arguments in Python\n",
@@ -861,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "6662f0f3",
+   "id": "61bd7e4d",
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "1c7c557d",
+   "id": "a84d1a27",
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "0aa6fc66",
+   "id": "410543ee",
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d21dff40",
+   "id": "d8d75919",
    "metadata": {},
    "source": [
     "# Exercise: Name and age\n",
@@ -938,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "b595948d",
+   "id": "2c06ce58",
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "28d455ff",
+   "id": "2ff2b27f",
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "9593a0d9",
+   "id": "eb059b19",
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "bbee03c4",
+   "id": "e7fc8843",
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42214410",
+   "id": "f7c570eb",
    "metadata": {},
    "source": [
     "# Optional arguments\n",
@@ -1045,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "fe525364",
+   "id": "c4e79172",
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "ee4e209a",
+   "id": "57ad2c04",
    "metadata": {},
    "outputs": [
     {
@@ -1096,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "155cae6f",
+   "id": "b5db0ea5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1111,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "a848cdb0",
+   "id": "d4cbbb10",
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1132,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "4e28fe3f",
+   "id": "2174d537",
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1153,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "2a714092",
+   "id": "4a4ae817",
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88d59747",
+   "id": "612952d0",
    "metadata": {},
    "source": [
     "# Next up:\n",
@@ -1185,7 +1185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1de05fcd",
+   "id": "543807eb",
    "metadata": {},
    "source": [
     "# f-strings (\"format strings\" or \"fancy strings\")\n",
@@ -1221,7 +1221,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "4e9ee273",
+   "id": "496d8e40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1232,7 +1232,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "62488a0d",
+   "id": "7a86d357",
    "metadata": {},
    "outputs": [
     {
@@ -1253,7 +1253,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "8e1e37a7",
+   "id": "58319ae6",
    "metadata": {},
    "outputs": [
     {
@@ -1277,7 +1277,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "0229c866",
+   "id": "9a071f1c",
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee99755b",
+   "id": "1c2d6fa8",
    "metadata": {},
    "source": [
     "# Argument typing"
@@ -1309,7 +1309,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "cdf51991",
+   "id": "1c4902b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1321,7 +1321,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "a8d42071",
+   "id": "08c73ebb",
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1342,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "47001615",
+   "id": "2c203de6",
    "metadata": {},
    "outputs": [
     {
@@ -1364,7 +1364,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "a9ae2ea4",
+   "id": "0d35e8b0",
    "metadata": {},
    "outputs": [
     {
@@ -1386,7 +1386,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "411d9a6e",
+   "id": "29a9e3e6",
    "metadata": {},
    "outputs": [
     {
@@ -1408,7 +1408,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "26ef73e9",
+   "id": "0c51af87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1439,7 +1439,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "976527e5",
+   "id": "07b9be48",
    "metadata": {},
    "outputs": [
     {
@@ -1460,7 +1460,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "b8cce198",
+   "id": "79568000",
    "metadata": {},
    "outputs": [
     {
@@ -1484,12 +1484,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fb4d6d1e",
+   "cell_type": "markdown",
+   "id": "6fbd76e7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Exercise: Vowel count\n",
+    "\n",
+    "1. Write a function, `vowel_count`, that takes a filename (string) as an argument.\n",
+    "2. The function should "
+   ]
   }
  ],
  "metadata": {
